[gd_scene load_steps=2 format=3 uid="uid://enemy_status_panel"]

[ext_resource type="Script" path="res://UI/enemy_status_panel.gd" id="1_enemy_panel"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_enemy_panel"]
content_margin_left = 15.0
content_margin_top = 10.0
content_margin_right = 15.0
content_margin_bottom = 10.0
bg_color = Color(0.05, 0.07, 0.09, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.2, 0.1, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 6
shadow_offset = Vector2(2, 2)

[node name="EnemyStatusPanel" type="Panel" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_enemy_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyStatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 10.0
offset_right = -15.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="InfoContainer" type="HBoxContainer" parent="EnemyStatusPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="EnemyNameLabel" type="Label" parent="EnemyStatusPanel/VBoxContainer/InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "Enemy Name"
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="EnemyStatusPanel/VBoxContainer/InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Lvl. 1"
vertical_alignment = 1

[node name="TypeLabel" type="Label" parent="EnemyStatusPanel/VBoxContainer/InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "(Creature)"
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="EnemyStatusPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="BarsContainer" type="HBoxContainer" parent="EnemyStatusPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="HealthSection" type="VBoxContainer" parent="EnemyStatusPanel/VBoxContainer/BarsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="HealthLabel" type="Label" parent="EnemyStatusPanel/VBoxContainer/BarsContainer/HealthSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 12
text = "HP"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="EnemyStatusPanel/VBoxContainer/BarsContainer/HealthSection"]
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
show_percentage = false

[node name="HealthValue" type="Label" parent="EnemyStatusPanel/VBoxContainer/BarsContainer/HealthSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 10
text = "100/100"
horizontal_alignment = 1

[node name="ManaSection" type="VBoxContainer" parent="EnemyStatusPanel/VBoxContainer/BarsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="ManaLabel" type="Label" parent="EnemyStatusPanel/VBoxContainer/BarsContainer/ManaSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.6, 1, 1)
theme_override_font_sizes/font_size = 12
text = "MP"
horizontal_alignment = 1

[node name="ManaBar" type="ProgressBar" parent="EnemyStatusPanel/VBoxContainer/BarsContainer/ManaSection"]
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
show_percentage = false

[node name="ManaValue" type="Label" parent="EnemyStatusPanel/VBoxContainer/BarsContainer/ManaSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 10
text = "50/50"
horizontal_alignment = 1

[node name="StatusEffectsContainer" type="HBoxContainer" parent="EnemyStatusPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="StatusEffectsLabel" type="Label" parent="EnemyStatusPanel/VBoxContainer/StatusEffectsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 11
text = "Status:"
vertical_alignment = 1

[node name="StatusEffectsIcons" type="HBoxContainer" parent="EnemyStatusPanel/VBoxContainer/StatusEffectsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4
